; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_request.c_req_put.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_request.c_req_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32, %struct.msg* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @req_put(%struct.msg* %0) #0 {
  %2 = alloca %struct.msg*, align 8
  %3 = alloca %struct.msg*, align 8
  store %struct.msg* %0, %struct.msg** %2, align 8
  %4 = load %struct.msg*, %struct.msg** %2, align 8
  %5 = getelementptr inbounds %struct.msg, %struct.msg* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = call i32 @ASSERT(i32 %6)
  %8 = load %struct.msg*, %struct.msg** %2, align 8
  %9 = call i32 @req_log(%struct.msg* %8)
  %10 = load %struct.msg*, %struct.msg** %2, align 8
  %11 = getelementptr inbounds %struct.msg, %struct.msg* %10, i32 0, i32 1
  %12 = load %struct.msg*, %struct.msg** %11, align 8
  store %struct.msg* %12, %struct.msg** %3, align 8
  %13 = load %struct.msg*, %struct.msg** %3, align 8
  %14 = icmp ne %struct.msg* %13, null
  br i1 %14, label %15, label %36

15:                                               ; preds = %1
  %16 = load %struct.msg*, %struct.msg** %3, align 8
  %17 = getelementptr inbounds %struct.msg, %struct.msg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %26, label %20

20:                                               ; preds = %15
  %21 = load %struct.msg*, %struct.msg** %3, align 8
  %22 = getelementptr inbounds %struct.msg, %struct.msg* %21, i32 0, i32 1
  %23 = load %struct.msg*, %struct.msg** %22, align 8
  %24 = load %struct.msg*, %struct.msg** %2, align 8
  %25 = icmp eq %struct.msg* %23, %24
  br label %26

26:                                               ; preds = %20, %15
  %27 = phi i1 [ false, %15 ], [ %25, %20 ]
  %28 = zext i1 %27 to i32
  %29 = call i32 @ASSERT(i32 %28)
  %30 = load %struct.msg*, %struct.msg** %2, align 8
  %31 = getelementptr inbounds %struct.msg, %struct.msg* %30, i32 0, i32 1
  store %struct.msg* null, %struct.msg** %31, align 8
  %32 = load %struct.msg*, %struct.msg** %3, align 8
  %33 = getelementptr inbounds %struct.msg, %struct.msg* %32, i32 0, i32 1
  store %struct.msg* null, %struct.msg** %33, align 8
  %34 = load %struct.msg*, %struct.msg** %3, align 8
  %35 = call i32 @rsp_put(%struct.msg* %34)
  br label %36

36:                                               ; preds = %26, %1
  %37 = load %struct.msg*, %struct.msg** %2, align 8
  %38 = call i32 @msg_tmo_delete(%struct.msg* %37)
  %39 = load %struct.msg*, %struct.msg** %2, align 8
  %40 = call i32 @msg_put(%struct.msg* %39)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @req_log(%struct.msg*) #1

declare dso_local i32 @rsp_put(%struct.msg*) #1

declare dso_local i32 @msg_tmo_delete(%struct.msg*) #1

declare dso_local i32 @msg_put(%struct.msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
